--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: SFAsim
 Type: Package
 Title: Simulate Data for SFA
-Version: 0.1
+Version: 0.2
 Date: 2017-11-11
 Author: Vaclav Hausenblas
 Maintainer: Vaclav Hausenblas <vaclav.hausenblas@gmail.com>
 Description: Set of tools to simulate (generate random) data for Stochastic frontier analysis
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.13)
+Imports: 
+  Rcpp (>= 0.12.13),
+  micEcon
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
