new generic function sim_data() for simulating data - both cross-section and panel data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(ar_sim_gamma)
 export(ar_sim_lnorm)
 export(ar_sim_norm)
 export(rtnorm)
+export(sim_data)
 export(sim_data_cs)
 export(sim_data_panel)
-export(sim_data_panel_ar)
 importFrom(Rcpp,evalCpp)
 useDynLib(SFAsim)
